[package]
name = "rust-chemdraw-xlsx"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.0"
log4rs = "1.2.0"
chrono = "0.4"

zip = "0.6"

ole = { path="./dep/common", default-features = false, features = ["blocking"] }

uuid = { version = "1.3", features = ["v4"] }

# reqwest = { version = "0.11", default-features = false, features = [
#  "blocking",
#  "rustls-tls",
# ] }

structopt = "0.3"
xlsxwriter = "0.6"

regex = "1.8.4"
# urlencoding = "2.1"

# xml-rs = "0.8.14"

serde-xml-rs = "0.6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
